Update: daily changes

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>The Master Jackets</title>
+  <meta name="google-site-verification" content="fy8bNAdPWhzKPfQ-y2Bsgr2svTFQ6S0QU9XmXqrVgiA" />
 </head>
 
 <body>
