--- a/public/index.html
+++ b/public/index.html
@@ -3,52 +3,62 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Primary Meta Tags -->
+  <title>The Master Jackets | Premium Leather Jackets Online</title>
+  <meta name="title" content="The Master Jackets | Premium Leather Jackets Online" />
+  <meta name="description"
+    content="Shop premium leather jackets, bomber jackets, biker jackets, and coats at The Master Jackets. Handcrafted quality, fast shipping, and easy returns." />
+  <meta name="keywords"
+    content="leather jackets, bomber jacket, biker jacket, shearling coat, men's jackets, women's jackets, The Master Jackets" />
+  <meta name="author" content="The Master Jackets Team" />
+
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
- 
- <!-- ⚠️ Dev only: Not optimized for production -->
-<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-
-
+  <!-- ⚠️ Dev only: Not optimized for production -->
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
 
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-  <title>The Master Jackets</title>
+  <meta name="theme-color" content="#000000" />
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
   <meta name="google-site-verification" content="fy8bNAdPWhzKPfQ-y2Bsgr2svTFQ6S0QU9XmXqrVgiA" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&display=swap"
+    rel="stylesheet">
+
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://themasterjackets-web.vercel.app/" />
+  <meta property="og:title" content="The Master Jackets | Premium Leather Jackets Online" />
+  <meta property="og:description"
+    content="Discover luxury and comfort with The Master Jackets. Shop premium leather jackets handcrafted for perfection." />
+  <meta property="og:image" content="https://themasterjackets-web.vercel.app/og-image.jpg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://themasterjackets-web.vercel.app/" />
+  <meta property="twitter:title" content="The Master Jackets | Premium Leather Jackets Online" />
+  <meta property="twitter:description"
+    content="Shop premium leather jackets with top-quality craftsmanship at The Master Jackets." />
+  <meta property="twitter:image" content="https://themasterjackets-web.vercel.app/og-image.jpg" />
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
 </body>
 
 </html>
