Update: daily changes

--- a/public/index.html
+++ b/public/index.html
@@ -32,10 +32,11 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
   <meta name="google-site-verification" content="fy8bNAdPWhzKPfQ-y2Bsgr2svTFQ6S0QU9XmXqrVgiA" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&display=swap"
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
 
 
